# nurex

./: README.md
docs/: json_format.md  python.md
examples/: custom_excitation.py  neutron_removals.py
nurex/: data_frdm.cpp
pymodule/: CMakeLists.txt
tests/: test.py
